<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.jack.leetcode</groupId>
  <artifactId>leetcode-java</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>leetcode-java</name>
  <inceptionYear>2014</inceptionYear>
  <description>leetcode of java version</description>
  <url>https://github.com/jacktan1991/leetcode-java</url>

  <scm><!--##Source Repository## in reporting site-->
    <connection>scm:git:https://github.com/jacktan1991/leetcode-java.git</connection>
    <developerConnection>scm:git:git@github.com:jacktan1991/leetcode-java.git</developerConnection>
    <url>http://github.com/jacktan1991/leetcode-java</url>
  </scm>
  <issueManagement><!--##Issue Tracking## in reporting site-->
    <system>Github Issues</system>
    <url>https://github.com/jacktan1991/leetcode-java/issues</url>
  </issueManagement>
  <ciManagement><!--##Continuous Integration## in reporting site-->
    <system>Travis CI</system>
    <url>https://travis-ci.org/jacktan1991/leetcode-java</url>
  </ciManagement>
  <licenses><!--##Project License## in reporting site-->
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>
  <mailingLists><!--##Mailing Lists## in reporting site-->
    <mailingList>
      <name>Jack Tan</name>
      <post>792626757@qq.com</post>
    </mailingList>
  </mailingLists>
  <developers><!--##Project Team##.Members in reporting site-->
    <developer>
      <id>jackie</id>
      <name>Jack Tan</name>
      <email>792626757@qq.com</email>
      <timezone>8</timezone>
      <roles>
        <role>Administrator</role>
        <role>Java Developer</role>
      </roles>
    </developer>
  </developers>
  <contributors><!--##Project Team##.Contributors in reporting site-->
    <contributor>
      <name>Jack Tan</name>
    </contributor>
  </contributors>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <checkstyle.config.location>checkstyle.xml</checkstyle.config.location>
    
    <junit.version>4.8.2</junit.version>
    <checkstyle.version>2.15</checkstyle.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.marvinformatics.formatter</groupId>
          <artifactId>formatter-maven-plugin</artifactId>
          <version>1.4.0</version>
          <configuration>
            <configFile>formatter-profile.xml</configFile>
            <configJsFile>formatter-profile.xml</configJsFile>
            <encoding>UTF-8</encoding>
            <lineEnding>CRLF</lineEnding>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>format</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>

      <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-checkstyle-plugin</artifactId>
       <version>${checkstyle.version}</version>
       <executions>
         <execution>
           <id>pre_package</id>
           <phase>prepare-package</phase>
           <configuration>
             <failsOnError>true</failsOnError>
           </configuration>
           <goals>
             <goal>check</goal>
           </goals>
         </execution>
       </executions>
     </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>2.8</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.10.3</version>
        <configuration>
          <quiet>true</quiet>
        </configuration>
        <reportSets>
          <reportSet>
            <reports>
              <report>javadoc</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>2.5</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>2.18.1</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>report-only</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>2.7</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>cobertura</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${checkstyle.version}</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>checkstyle</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.4</version>
        <configuration>
          <targetJdk>1.7</targetJdk>
          <rulesets>
            <ruleset>/rulesets/java/braces.xml</ruleset>
            <ruleset>/rulesets/java/naming.xml</ruleset>
            <ruleset>/rulesets/java/unnecessary.xml</ruleset>
          </rulesets>
        </configuration>
      </plugin>

      <!-- Requires setting 'export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m" ' -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <threshold>High</threshold>
          <effort>Default</effort>
          <xmlOutput>true</xmlOutput>
          <xmlOutputDirectory>${project.build.directory}/site</xmlOutputDirectory>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

  <profiles>
    <profile>
      <id>travis</id>
      <activation>
        <property>
          <name>env.TRAVIS</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>cobertura-maven-plugin</artifactId>
            <version>2.7</version>
            <configuration>
              <formats>
                <format>xml</format>
              </formats>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.eluder.coveralls</groupId>
            <artifactId>coveralls-maven-plugin</artifactId>
            <version>3.1.0</version>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
